Fixed the video size (it was too big) fixed the footer issue with the double scroll, now there is only one scroll bar.

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -102,10 +102,8 @@ p{
 .wraping {
   position: static;
   width: 100%;
-  padding: 0px  ;
-  margin: 0px;
-  overflow-y: scroll;
-  height: 92%;
+  min-height: 100%;
+  padding-bottom: 50px;
 }
 
 .headerContent{
@@ -383,6 +381,10 @@ a[aria-expanded=false] .glyphicon-chevron-down {
 }
 
 .video-container {
+  max-width:854px;
+  max-height:480px;
+  margin-right:auto;
+  margin-left:auto;
   position:relative;
   padding-bottom:56.25%;
   padding-top:30px;
@@ -396,5 +398,7 @@ a[aria-expanded=false] .glyphicon-chevron-down {
   left:0;
   width:100%;
   height:100%;
+  max-width:854px;
+  max-height:480px;
 }
 
